# arangodb-events-rs

./: .editorconfig  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: cargo.yml
src/: api.rs  config.rs  connection.rs  deserialize.rs  errors.rs  events.rs  lib.rs  trigger.rs  utils.rs
tests/: integration_test.rs
