[package]
name = 'arangodb_events_rs'
version = '0.1.1'
edition = '2021'
authors = ['Foretag Inc. <contact@foret.ag>']
repository = 'https://github.com/ForetagInc/arangodb-events-rs'
keywords = ['arango', 'arangoDB', 'events', 'trigger', 'database']
categories = ['database']
exclude = ['.gitignore', '.github']

[lib]
bench = true

[dependencies]
hyper = { version = '0.14', features = ['client', 'tcp', 'http2', 'stream'] }
serde = { version = '1', features = ['derive'] }
serde_json = '1'
tokio = { version = '1', features = ['rt', 'macros'] }
base64 = '0.13.0'
futures-util = { version = '0.3.21', features = ['io'] }
